--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,4 @@ client/yarn-debug.log*
 client/yarn-error.log*
 
 server/node_modules
-server/package-lock.json
-server/package.json
-
+server/dist
