--- a/client/package.json
+++ b/client/package.json
@@ -10,13 +10,14 @@
     "@types/node": "^12.19.8",
     "@types/react": "^16.14.2",
     "@types/react-dom": "^16.9.10",
+    "@types/socket.io": "^2.1.12",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
     "redux": "^4.0.5",
+    "socket.io-client": "^3.0.4",
     "typescript": "^4.1.2",
-    "web-vitals": "^0.2.4",
-    "websocket": "^1.0.33"
+    "web-vitals": "^0.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
