--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@types/socket.io": "^2.1.12",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-redux": "^7.2.2",
     "react-scripts": "4.0.1",
     "redux": "^4.0.5",
     "socket.io-client": "^3.0.4",
@@ -44,6 +45,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-redux": "^7.1.12",
     "@types/websocket": "^1.0.1"
   }
 }
